--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=course-list-application
 server.port=8080
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/courses
+spring.datasource.url=jdbc:mysql://db:3306/courses
 spring.datasource.username=root
 spring.datasource.password=ganesh
 
